[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Wall-Background-HD-Wallpapers-16562.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Login.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Button.gd" type="Script" id=4]
[ext_resource path="res://Resources/happy-times-at-the-ikob.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Wall-Background-HD-Wallpapers-16562" type="Sprite" parent="."]
position = Vector2( 511.82, 300.602 )
scale = Vector2( 0.398627, 0.373473 )
texture = ExtResource( 1 )

[node name="Login" type="Button" parent="Wall-Background-HD-Wallpapers-16562"]
margin_left = -322.0
margin_top = 53.0
margin_right = 159.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Login"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Wall-Background-HD-Wallpapers-16562"]
margin_left = -321.0
margin_top = -46.6049
margin_right = 160.0
margin_bottom = 10.3951
custom_fonts/font = SubResource( 2 )
text = "Username: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go home" type="Button" parent="."]
margin_left = 384.241
margin_top = 384.412
margin_right = 576.241
margin_bottom = 446.412
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats text" type="RichTextLabel" parent="."]
margin_left = 389.0
margin_top = 201.0
margin_right = 667.0
margin_bottom = 279.0
text = "Username = NULL
Hit = NULL
Attempts = NULL
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Wall-Background-HD-Wallpapers-16562/Login" to="." method="_on_Login_pressed"]
[connection signal="script_changed" from="Wall-Background-HD-Wallpapers-16562/TextEdit" to="." method="_on_TextEdit_script_changed"]
[connection signal="text_changed" from="Wall-Background-HD-Wallpapers-16562/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Go home" to="." method="_on_Go_home_pressed"]
